[package]
name = "glissade-macro"
version = "0.1.0"
authors = ["Andrei Monkin <monkin.andrey@gmail.com>"]
description = "Derive macro for implementing glissade::Mix trait"
edition = "2021"
publish = true
readme = "../README.md"
license = "MIT"
repository = "https://github.com/monkin/glissade"

[lib]
name = "glissade_macro"
proc-macro = true

[dependencies]
syn = { version = "^2.0.67", features = ["extra-traits"]}
quote = "^1.0.36"
