[package]
name = "glissade"
version = "0.2.0"
authors = ["Andrei Monkin <monkin.andrey@gmail.com>"]
description = "Rust library that provides various utilities for animations and transitions"
keywords = ["animation", "transition", "interpolation", "easing"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/monkin/glissade"
documentation = "https://docs.rs/glissade"
edition = "2021"
publish = true

[features]
default = ["derive", "web-time"]
nalgebra = ["dep:nalgebra", "dep:num-traits"]
euclid = ["dep:euclid"]
palette = ["dep:palette"]
derive = ["dep:glissade-macro"]
cgmath = ["dep:cgmath"]
glam = ["dep:glam"]
web-time = ["dep:web-time"]

[dependencies]
nalgebra = { version = "0.33", optional = true }
euclid = { version = "0.22", optional = true }
num-traits = { version = "0.2", optional = true }
palette = { version = "0.7", optional = true }
cgmath = { version = "0.18", optional = true }
glissade-macro = { version = "0.1", optional = true, path = "../glissade-macro" }
web-time = { version = "1.1", optional = true }
glam = { version = "0.29", optional = true }
