[package]
name = "follow-cursor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
euclid = { version = "0.22" }
glissade = { version = "0.2", path = "../../glissade", features = ["euclid", "web-time"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "DomTokenList",
    "console",
    "Element",
    "Performance",
    "MouseEvent",
    "HtmlBodyElement",
]
