[package]
name = "poly"
version = "0.1.0"
edition = "2021"

[dependencies]
glissade = { path = "../../glissade", version = "0.1", features = ["glam"] }
glam = "0.29"
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
web-time = "1.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "DomTokenList",
    "console",
    "Element",
    "Performance",
    "MouseEvent",
    "HtmlBodyElement",
]

